svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-prod
spec:
  selector:
    env: prod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
