ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress
  annotations:     
     nginx.ingress.kubernetes.io/rewrite-target: /health
     nginx.ingress.kubernetes.io/use-regex: "true"
     custom.nginx.org/regex-insensitive-prefix: "true"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: kuber-service-prod
            port: 
              number: 80
      - path: /otusapp/[A-Z]+/health
        pathType: ImplementationSpecific
        backend:
          service:
            name: kuber-service-prod
            port: 
              number: 80
  ingressClassName: nginx
